# price-maker

./: .gitignore  README.md  pyproject.toml
config/: settings.py  urls.py
price/: admin.py  models.py  paginators.py  permissions.py  serializers.py  tests.py  urls.py  views.py
price/migrations/: 0001_initial.py  0002_price_owner.py
users/: models.py  paginators.py  permissions.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_is_vendor.py  0003_alter_user_is_vendor.py
